Update requirements.txt with all dependencies from virtual environment

--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,11 @@
             <div id="speakers-view" class="view">
                 <div class="view-header">
                     <h2>Speakers</h2>
+                    <p>Manage your identified speakers and their statistics.</p>
                 </div>
+                <button class="add-speaker-btn" onclick="showAddSpeakerModal()">
+                    + Add New Speaker
+                </button>
                 <div id="speakers-list" class="speakers-list">
                     <div class="spinner-container">
                         <div class="spinner"></div>
